refactor: Convention 수정